--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-tooltip": "^5.10.0",
+    "serve": "^14.2.0",
     "typescript": "4.9.5"
   }
 }
